--- a/ST 2.html
+++ b/ST 2.html
@@ -22,14 +22,13 @@
     .card{ 
       background: #fff; 
       border-radius: 8px; 
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
       width: 220px; 
       text-align: center; 
       padding: 16px;
     }
     .avatar{ 
       width: 70px; height: 70px; 
-      background: #007bff; color: #fff; 
+      background: #ffbb00; color: #fff; 
       border-radius: 50%; 
       display: flex; justify-content: center; align-items: center; 
       font-size: 20px; margin: 0 auto 12px;
